Fixed intro on smaller screens.

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -11,3 +11,13 @@
     font-family: 'VT323', monospace;
     /*border: #479d39 dashed 2px;*/
 }
+
+.sub-intro {
+    font-size: 2.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+    .intro-container {
+        font-size: 3rem;
+    }
+}
